Fixed spacing at mobile size.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -206,7 +206,7 @@ button {
     border-width: 3px;
     background-color: var(--mainColor);
     max-width: 85%;
-    max-height: 2950px;
+    max-height: 3000px;
     padding-bottom: 400px;
     padding-top: 10px;    
     }
